[package]
name = "passcurses"
version = "0.1.0"
authors = ["ernie117 <ern3st@hotmail.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.9"
termion = "1.5"
term_cursor = "0.2.1"
serde = {version="1.0.106", features=["derive"]}
serde_json = "1.0.52"
dirs = "2.0.2"
