[package]
name = "passcurses"
version = "0.1.0"
authors = ["ernie117 <ern3st@hotmail.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.14"
termion = "1.5"
term_cursor = "0.2.1"
serde = {version="1.0.117", features=["derive"]}
serde_json = "1.0.59"
dirs = "3.0.1"
rust-argon2 = "0.8"
aes-gcm = "0.8.0"
aead = "0.3.2"
rand = "0.8.2"
base64 = "0.13.0"
generic-array = "0.14.4"
lazy_static = "1.4.0"

[dev-dependencies]
pretty_assertions = "0.6.1"

[[bin]]
name = "psc"
path = "src/main.rs"
